# jaxrenderer

./: .gitignore  README.md  pyproject.toml  shell.nix  tox.ini
.github/workflows/: checks.yml  pypi.yml
examples/: axises_and_plane.py  batch_rendering.py  behind_camera.py  simple_triangles.py
renderer/: __init__.py  _meta_utils.py  geometry.py  model.py  pipeline.py  renderer.py  scene.py  shader.py  shadow.py  types.py  utils.py  value_checker.py
renderer/shaders/: depth.py  gouraud.py  gouraud_texture.py  phong.py  phong_darboux.py  phong_reflection.py  phong_reflection_shadow.py
test_resources/: utils.py
tests/: smoke_test.py  test_utils.py
