[project]
name = "jaxrenderer"
version = "0.3.2"
description = "Jax implementation of rasterizer renderer."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Joey Teng", email = "joey.teng.dev@gmail.com" },
    { name = "Howard Nguyen-Huu", email = "howardnguyenhuu@gmail.com" },
]
classifiers = [
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "beartype>=0.22.9",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "jaxtyping>=0.2.19",
    "numpy>=1.22.0",
    "pyqt6>=6.10.2",
    "typing_extensions>=4.3.0",
    "matplotlib>=3.6.2",
]

[project.urls]
Homepage = "https://github.com/JoeyTeng/jaxrenderer"
Repository = "https://github.com/JoeyTeng/jaxrenderer"
"Bug Tracker" = "https://github.com/JoeyTeng/jaxrenderer/issues"

[dependency-groups]
dev = [
    "black>=23",
    "isort>=5.12",
    "pillow>=9.4.0",
]
test = [
    "pre-commit>=3.3.3",
    "pytest>=7,<8",
    "tox>=4,<5",
]

[build-system]
requires = ["uv_build>=0.10.2"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "renderer"
module-root = ""
source-include = ["changelog.md"]

[tool.uv.sources]
jaxlib = { index = "jax" }

[[tool.uv.index]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
format = "flat"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"
py_version= 311
src_paths = ["renderer", "examples", "test_resources", "tests"]
line_length = 88
combine_star = true
order_by_type = true
case_sensitive = true
force_sort_within_sections = true
split_on_trailing_comma = true
only_modified = true
skip_gitignore = true

[tool.black]
target-versions = ["py311", "py312", "py313"]
required-version = 23

[tool.pyright]
include = ["renderer", "examples", "test_resources", "tests"]
exclude = ["typings/**", ".*/**", "**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"

pythonVersion = "3.11"
pythonPlatform = "All"

executionEnvironments = [
  { root = ".", pythonVersion = "3.11", pythonPlatform = "All" },
]

reportCallInDefaultInitializer = "information"
reportImplicitOverride = "information"
reportImplicitStringConcatenation = "none"
reportImportCycles = "error"
reportMissingSuperCall = "information"
reportPropertyTypeMismatch = "information"
reportShadowedImports = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "information"
